samples/_failures_safe/1761696951_c7167f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3afe19b.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_d3afe19b.c:170:12: error: missing terminating " character
  170 |     printf("Token count
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_d3afe19b.c:170:5: error: expected expression at end of input
  170 |     printf("Token count
      |     ^~~~~~
./samples/SAFE/__tmp_d3afe19b.c:170:5: error: expected declaration or statement at end of input
